force-app/main/default/objects/Environment_Name__c/Environment_Name__c.object-meta.xml
<CustomObject>
    <label>Environment Name</label>
    <nameField>
        <label>Environment Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>