force-app/main/default/objects/Environment_Name__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>