force-app/main/default/objects/Environment_Name__c/fields/Deployment_Item__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Item</label>
    <referenceTo>Deployment_Item__c</referenceTo>
    <relationshipLabel>Environment Names</relationshipLabel>
    <relationshipName>Environment_Names</relationshipName>
    <type>Lookup</type>
</CustomField>