force-app/main/default/objects/Environment_Name__c/fields/Executed_On__c.field-meta.xml
<CustomField>
    <fullName>Executed_On__c</fullName>
    <label>Executed On</label>
    <type>DateTime</type>
</CustomField>