force-app/main/default/objects/Environment_Name__c/fields/Log_Number__c.field-meta.xml
<CustomField>
    <fullName>Log_Number__c</fullName>
    <displayFormat>LOG-{00000}</displayFormat>
    <label>Log Number</label>
    <type>AutoNumber</type>
</CustomField>