force-app/main/default/objects/Environment_Name__c/fields/Release_Request__c.field-meta.xml
<CustomField>
    <fullName>Release_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Release Request</label>
    <referenceTo>Release_Request__c</referenceTo>
    <relationshipLabel>Environment Names</relationshipLabel>
    <relationshipName>Environment_Names</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>