force-app/main/default/objects/Environment_Name__c/fields/Validation_Result_Number__c.field-meta.xml
<CustomField>
    <fullName>Validation_Result_Number__c</fullName>
    <displayFormat>VR-{00000}</displayFormat>
    <label>Validation Result Number</label>
    <type>AutoNumber</type>
</CustomField>