force-app/main/default/objects/Environment_Name__c/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <label>Validation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automated Test</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Post-Deploy</fullName>
            </value>
            <value>
                <fullName>Pre-Deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>